fix api user auth
